# Short_app

./: .gitignore  .pylintrc  LICENSE  README.md  index.md  manage.py  pyproject.toml  type.py
.github/workflows/: pylint.yml  python-app.yml
short_app/: __init__.py  app.py  graphql_app.py
short_app/settings/: engine.py  fib.py  settings.py  sql.db  utils.py
short_app/utils/: argpars.py  directory.py
short_app/video/: routes.py  utils.py
tests/: test_short_app.py  test_utils.py
utils/: argpars.py  directory.py
