[tool.poetry]
name = "short_app"
version = "0.1.0"
description = ""
authors = ["Prabal Pathak <prabal01pathak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.39"
typer = "^0.4.1"
requests = "^2.28.1"
strawberry-graphql = {extras = ["fastapi"], version = "^0.115.0"}
python-multipart = "^0.0.5"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.14.4"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
